Fix that random weird misalignment issue with the nav bar

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -20,6 +20,11 @@ body{
 		display:none !important;
 	}
 
+	#left, #right {
+		margin: 30px;
+		/*min-width: 400px;*/
+	}
+
 	.mainWrapper{
 		background: -webkit-linear-gradient(top, rgba(230,230,230,1) 3%,rgba(215,215,215,1) 45%,rgba(200,200,200,1) 70%,rgba(245,245,245,1) 95%);
 		background: linear-gradient(to bottom, rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%);
