--- a/app/assets/stylesheets/headfoot.css.scss
+++ b/app/assets/stylesheets/headfoot.css.scss
@@ -3,11 +3,11 @@
 
 	#h_logo {
 		background:url("alt-title.png");
-		width: 490px;
 		height:75px;
 		display: block;
 		font-family: times, serif;
 		margin-bottom: 10px;
+		background-repeat: no-repeat;
 	}
 
 	.logo {
@@ -34,11 +34,10 @@
 		float: left;
 		height: auto;
 		font-family: arial, helvetica, sans-serif;
+		width: 100%;
+		margin-left: 0 !important;
 	}
 
-	#mainNav{
-		width: 100%;
-	}
 
 	.navLink {
 		padding: 10px 30px;
