--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -13,7 +13,7 @@
 body {
 
 	#feed_holder {
-		margin-left: 20px;
+	/*	margin-left: 20px;*/
 	}
 
 	#dev, #ops {
@@ -22,11 +22,6 @@ body {
 	padding: 0 0 10px 10px;
 	box-shadow: inset 0 -2px 2px rgba(0,0,0,0.2);
 	height: auto;
-	}
-
-	#left, #right {
-		margin: 20px;
-		min-width: 400px;
 	}
 
 	.people, .tele, .mail {
